# RayTracing

./: README.md
Header/: vec3.h
RayTracing/: CMakeLists.txt  RayTracing.sln  RayTracing.vcxproj  RayTracing.vcxproj.filters
RayTracing/Header/: color.h  ray.h
RayTracing/Source/: main.cpp
